mudança no nome

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>Stop Fly</title>
+    <title>Stop Flying</title>
 </head>
 <body>
     <section class="gameBoard">
@@ -15,7 +15,7 @@
             <p id="time" class="paragrafo"></p>
         </div>
         <div class="divStart" onclick="play()">
-            <h1>STOP FLY</h1>
+            <h1>STOP FLYING</h1>
             <input type="button" value="START">
             <img src="imagens/aviao.png">
         </div>
