Adição de medias querry

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" media="screen and (orientation:landscape)">
+    <link rel="stylesheet" href="alert.css" media="screen and (orientation:portrait)">
     <script src="script.js" defer></script>
     <title>Stop Flying</title>
 </head>
 <body>
+    <section class="alert">
+        <p>Atenção ! <br> O tamanho da  tela do seu dispositivo não é compativel com esse jogo !</p>
+        <img src="imagens/aviao.png">
+        
+    </section>
     <section class="gameBoard">
         <div id="divScore">
             <p id="score" class="paragrafo"></p>
